--- a/webapp/reports/templates/package_tracker.html
+++ b/webapp/reports/templates/package_tracker.html
@@ -16,9 +16,8 @@
     {% endif %}
     {% endwith %}
 
-    {# application content needs to be provided in the app_content block #}
     {% block app_content %}
-    <h1>PASTA Package Tracker</h1>
+    <h2>PASTA+ Package Tracker</h2>
     <div class="row">
         <div class="col-md-4">
             <form method="POST" action="" class="form" role="form">
