Add DataONE section with bottom padding

--- a/webapp/reports/templates/package_status.html
+++ b/webapp/reports/templates/package_status.html
@@ -42,7 +42,7 @@
     </div>
 
     <a href="#dataone" data-toggle="collapse"><h4>DataONE Status</h4></a>
-    <div id="dataone"  class="collapse" style="padding-left: 2em;">
+    <div id="dataone"  class="collapse" style="padding-left: 2em; padding-bottom: 2em">
         <table class="table table-bordered table-striped" style="width: 70em">
             <tr>
                 <th style="text-align: center; width: 50em;">{{ package_status.gmn_host }} Generic Member Node (GMN)</th>
