Remove LTER LDAP from health at a glance

--- a/webapp/health/templates/glance.html
+++ b/webapp/health/templates/glance.html
@@ -207,16 +207,16 @@
                 {{ system.server_status(servers['LDAP_EDI'])[1] }}
         </td>
     </tr>
-    <tr>
-        <td align="center">
-            <a href="/dashboard/health/server/ldap.lternet.edu">
-                LTER LDAP
-            </a>
-        </td>
-        <td class="{{ system.server_status(servers['LDAP_LTER'])[0] }}">
-                {{ system.server_status(servers['LDAP_LTER'])[1] }}
-        </td>
-    </tr>
+{#    <tr>#}
+{#        <td align="center">#}
+{#            <a href="/dashboard/health/server/ldap.lternet.edu">#}
+{#                LTER LDAP#}
+{#            </a>#}
+{#        </td>#}
+{#        <td class="{{ system.server_status(servers['LDAP_LTER'])[0] }}">#}
+{#                {{ system.server_status(servers['LDAP_LTER'])[1] }}#}
+{#        </td>#}
+{#    </tr>#}
     <tr>
         <td align="center">
             <a href="/dashboard/health/server/seo.edirepository.org">
