Add embargo management menu item

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -108,6 +108,11 @@
                                 Working On
                             </a>
                         </li>
+                        <li>
+                            <a href="{{ url_for('pasta.embargo_management') }}">
+                                Embargo Management (admin)
+                            </a>
+                        </li>
                     </ul>
                 </li>
                  <li class="dropdown">
