Change josh.lternet.edu to josh.edirepository.org

--- a/webapp/health/templates/glance.html
+++ b/webapp/health/templates/glance.html
@@ -279,7 +279,7 @@
     </tr>
     <tr>
         <td align="center">
-            <a href="/dashboard/health/server/josh.lternet.edu">
+            <a href="/dashboard/health/server/josh.edirepository.org">
                 Backup Josh
             </a>
         </td>
