Rename from environmentaldatainitiative to edirepository

--- a/webapp/auth/templates/welcome_user.html
+++ b/webapp/auth/templates/welcome_user.html
@@ -16,7 +16,7 @@
     <br/>
     <h4>You may find the following links of interest:</h4>
     <ul>
-        <li><em>Environmental Data Initiative</em> <a href="https://www.environmentaldatainitiative.org">Home Page</a></li>
+        <li><em>Environmental Data Initiative</em> <a href="https://edirepository.org">Home Page</a></li>
         <li><em>Environmental Data Initiative</em> <a href="https://portal.edirepository.org/nis">Data Portal</a></li>
     </ul>
 
