--- a/webapp/auth/templates/welcome_user.html
+++ b/webapp/auth/templates/welcome_user.html
@@ -11,7 +11,7 @@
     <h3 align="center">Welcome <b><em>{{ ldap_user.cn }}</em></b>, to the Environmental
         Data Initiative!</b></h3>
     <br/>
-    <h4>Please user your <em>user ID</em> (<b>{{ ldap_user.uid }}</b>) and
+    <h4>Please use your <em>user ID</em> (<b>{{ ldap_user.uid }}</b>) and
         <em>password</em> to login for access to EDI resources.</h4>
     <br/>
     <h4>You may find the following links of interest:</h4>
