--- a/webapp/auth/templates/reset_password_init.html
+++ b/webapp/auth/templates/reset_password_init.html
@@ -1,16 +1,34 @@
 {% extends "base.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
-{% block app_content %}
-    <h1>Reset EDI Password</h1>
-    <div class="row">
-        <div class="col-md-4">
-            <form method="POST" action="" class="form" role="form">
-                {{ form.csrf_token }}
-                {{ wtf.form_field(form.uid) }}
-                <input class="btn btn-primary" type="submit" value="Reset Password"/>
-                <input class="btn btn-primary" type="reset" value="Clear"/>
-            </form>
+{% block title %}
+{% if title %}{{ title }} - EDI Dashboard{% endif %}
+{% endblock %}
+
+{% block content %}
+<div class="container">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    {% for category, message in messages %}
+    <div class="alert {{ category }}"><strong>{{ message }}</strong></div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+
+    {% block app_content %}
+        <h1>Reset EDI User Password</h1>
+        <div class="row">
+            <div class="col-md-4">
+                <form method="POST" action="" class="form" role="form">
+                    {{ form.csrf_token }}
+                    {{ wtf.form_field(form.uid) }}
+                    <input class="btn btn-primary" type="submit" value="Reset Password"/>
+                    <input class="btn btn-primary" type="reset" value="Clear"/>
+                </form>
+            </div>
         </div>
-    </div>
+    {% endblock %}
+
+</div>
+
 {% endblock %}
