Fix incorrect variable name: replace AUTH with AUTH_S

--- a/webapp/health/templates/glance.html
+++ b/webapp/health/templates/glance.html
@@ -174,8 +174,8 @@
                 Staging
             </a>
         </td>
-        <td class="{{ system.server_status(servers['AUTH'])[0] }}">
-                {{ system.server_status(servers['AUTH'])[1] }}
+        <td class="{{ system.server_status(servers['AUTH_S'])[0] }}">
+                {{ system.server_status(servers['AUTH_S'])[1] }}
         </td>
     </tr>
     <tr>
