Add WWW/WEB-X to dashboard glance

--- a/webapp/health/templates/glance.html
+++ b/webapp/health/templates/glance.html
@@ -283,6 +283,16 @@
     </tr>
     <tr>
         <td align="center">
+            <a href="/dashboard/health/server/web-x.edirepository.org">
+                WWW/WEB-X
+            </a>
+        </td>
+        <td class="{{ system.server_status(servers['WEBX'])[0] }}">
+                {{ system.server_status(servers['WEBX'])[1] }}
+        </td>
+    </tr>
+    <tr>
+        <td align="center">
             <a href="/dashboard/health/server/space.lternet.edu">
                 Backup Space
             </a>
